--- a/pages/buttons.html
+++ b/pages/buttons.html
@@ -7,8 +7,15 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet">
   <link rel="stylesheet" href="../css/design-system.css">
   <link rel="stylesheet" href="../css/site.css">
+  <style>
+    .material-symbols-outlined {
+      font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 20;
+      font-size: 16px;
+    }
+  </style>
 </head>
 <body>
   <div class="site-container">
@@ -54,19 +61,11 @@
           <div class="preview-label">Primary</div>
           <div class="preview-controls">
             <button class="btn btn-primary btn-medium">
-              <span class="btn-icon">
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                  <path d="M8 10.8C8.77778 10.8 9.43889 10.5278 9.98334 9.98333C10.5278 9.43889 10.8 8.77777 10.8 8C10.8 7.22222 10.5278 6.56111 9.98334 6.01666C9.43889 5.47222 8.77778 5.2 8 5.2C7.22223 5.2 6.56112 5.47222 6.01667 6.01666C5.47223 6.56111 5.2 7.22222 5.2 8C5.2 8.77777 5.47223 9.43889 6.01667 9.98333C6.56112 10.5278 7.22223 10.8 8 10.8ZM8 9.6C7.55556 9.6 7.17778 9.44444 6.86667 9.13333C6.55556 8.82222 6.4 8.44444 6.4 8C6.4 7.55555 6.55556 7.17777 6.86667 6.86666C7.17778 6.55555 7.55556 6.4 8 6.4C8.44445 6.4 8.82223 6.55555 9.13334 6.86666C9.44445 7.17777 9.60001 7.55555 9.60001 8C9.60001 8.44444 9.44445 8.82222 9.13334 9.13333C8.82223 9.44444 8.44445 9.6 8 9.6Z" fill="currentColor"/>
-                </svg>
-              </span>
+              <span class="material-symbols-outlined">visibility</span>
               Preview
             </button>
             <button class="btn btn-primary btn-medium" disabled>
-              <span class="btn-icon">
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                  <path d="M8 10.8C8.77778 10.8 9.43889 10.5278 9.98334 9.98333C10.5278 9.43889 10.8 8.77777 10.8 8C10.8 7.22222 10.5278 6.56111 9.98334 6.01666C9.43889 5.47222 8.77778 5.2 8 5.2C7.22223 5.2 6.56112 5.47222 6.01667 6.01666C5.47223 6.56111 5.2 7.22222 5.2 8C5.2 8.77777 5.47223 9.43889 6.01667 9.98333C6.56112 10.5278 7.22223 10.8 8 10.8ZM8 9.6C7.55556 9.6 7.17778 9.44444 6.86667 9.13333C6.55556 8.82222 6.4 8.44444 6.4 8C6.4 7.55555 6.55556 7.17777 6.86667 6.86666C7.17778 6.55555 7.55556 6.4 8 6.4C8.44445 6.4 8.82223 6.55555 9.13334 6.86666C9.44445 7.17777 9.60001 7.55555 9.60001 8C9.60001 8.44444 9.44445 8.82222 9.13334 9.13333C8.82223 9.44444 8.44445 9.6 8 9.6Z" fill="currentColor"/>
-                </svg>
-              </span>
+              <span class="material-symbols-outlined">visibility</span>
               Preview
             </button>
           </div>
@@ -76,19 +75,11 @@
           <div class="preview-label">Secondary</div>
           <div class="preview-controls">
             <button class="btn btn-secondary btn-medium">
-              <span class="btn-icon">
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                  <path d="M8 10.8C8.77778 10.8 9.43889 10.5278 9.98334 9.98333C10.5278 9.43889 10.8 8.77777 10.8 8C10.8 7.22222 10.5278 6.56111 9.98334 6.01666C9.43889 5.47222 8.77778 5.2 8 5.2C7.22223 5.2 6.56112 5.47222 6.01667 6.01666C5.47223 6.56111 5.2 7.22222 5.2 8C5.2 8.77777 5.47223 9.43889 6.01667 9.98333C6.56112 10.5278 7.22223 10.8 8 10.8ZM8 9.6C7.55556 9.6 7.17778 9.44444 6.86667 9.13333C6.55556 8.82222 6.4 8.44444 6.4 8C6.4 7.55555 6.55556 7.17777 6.86667 6.86666C7.17778 6.55555 7.55556 6.4 8 6.4C8.44445 6.4 8.82223 6.55555 9.13334 6.86666C9.44445 7.17777 9.60001 7.55555 9.60001 8C9.60001 8.44444 9.44445 8.82222 9.13334 9.13333C8.82223 9.44444 8.44445 9.6 8 9.6Z" fill="currentColor"/>
-                </svg>
-              </span>
+              <span class="material-symbols-outlined">visibility</span>
               Preview
             </button>
             <button class="btn btn-secondary btn-medium" disabled>
-              <span class="btn-icon">
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                  <path d="M8 10.8C8.77778 10.8 9.43889 10.5278 9.98334 9.98333C10.5278 9.43889 10.8 8.77777 10.8 8C10.8 7.22222 10.5278 6.56111 9.98334 6.01666C9.43889 5.47222 8.77778 5.2 8 5.2C7.22223 5.2 6.56112 5.47222 6.01667 6.01666C5.47223 6.56111 5.2 7.22222 5.2 8C5.2 8.77777 5.47223 9.43889 6.01667 9.98333C6.56112 10.5278 7.22223 10.8 8 10.8ZM8 9.6C7.55556 9.6 7.17778 9.44444 6.86667 9.13333C6.55556 8.82222 6.4 8.44444 6.4 8C6.4 7.55555 6.55556 7.17777 6.86667 6.86666C7.17778 6.55555 7.55556 6.4 8 6.4C8.44445 6.4 8.82223 6.55555 9.13334 6.86666C9.44445 7.17777 9.60001 7.55555 9.60001 8C9.60001 8.44444 9.44445 8.82222 9.13334 9.13333C8.82223 9.44444 8.44445 9.6 8 9.6Z" fill="currentColor"/>
-                </svg>
-              </span>
+              <span class="material-symbols-outlined">visibility</span>
               Preview
             </button>
           </div>
@@ -97,16 +88,28 @@
         <div class="preview-box">
           <div class="preview-label">Destructive</div>
           <div class="preview-controls">
-            <button class="btn btn-destructive btn-medium">Delete</button>
-            <button class="btn btn-destructive btn-medium" disabled>Delete</button>
+            <button class="btn btn-destructive btn-medium">
+              <span class="material-symbols-outlined">delete</span>
+              Delete
+            </button>
+            <button class="btn btn-destructive btn-medium" disabled>
+              <span class="material-symbols-outlined">delete</span>
+              Delete
+            </button>
           </div>
         </div>
 
         <div class="preview-box">
           <div class="preview-label">Success</div>
           <div class="preview-controls">
-            <button class="btn btn-success btn-medium">Confirm</button>
-            <button class="btn btn-success btn-medium" disabled>Confirm</button>
+            <button class="btn btn-success btn-medium">
+              <span class="material-symbols-outlined">check_circle</span>
+              Confirm
+            </button>
+            <button class="btn btn-success btn-medium" disabled>
+              <span class="material-symbols-outlined">check_circle</span>
+              Confirm
+            </button>
           </div>
         </div>
       </section>
@@ -131,27 +134,19 @@
       <section class="section">
         <div class="section-header">
           <h2 class="section-title display-20">With Icons</h2>
-          <p class="section-description">Buttons can include icons for added context.</p>
+          <p class="section-description">Buttons with Google Material Symbols.</p>
         </div>
 
         <div class="preview-box">
           <div class="preview-label">Icon + Text</div>
           <div class="preview-controls">
             <button class="btn btn-primary btn-medium">
-              <span class="btn-icon">
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                  <path d="M8 10.8C8.77778 10.8 9.43889 10.5278 9.98334 9.98333C10.5278 9.43889 10.8 8.77777 10.8 8C10.8 7.22222 10.5278 6.56111 9.98334 6.01666C9.43889 5.47222 8.77778 5.2 8 5.2C7.22223 5.2 6.56112 5.47222 6.01667 6.01666C5.47223 6.56111 5.2 7.22222 5.2 8C5.2 8.77777 5.47223 9.43889 6.01667 9.98333C6.56112 10.5278 7.22223 10.8 8 10.8ZM8 9.6C7.55556 9.6 7.17778 9.44444 6.86667 9.13333C6.55556 8.82222 6.4 8.44444 6.4 8C6.4 7.55555 6.55556 7.17777 6.86667 6.86666C7.17778 6.55555 7.55556 6.4 8 6.4C8.44445 6.4 8.82223 6.55555 9.13334 6.86666C9.44445 7.17777 9.60001 7.55555 9.60001 8C9.60001 8.44444 9.44445 8.82222 9.13334 9.13333C8.82223 9.44444 8.44445 9.6 8 9.6Z" fill="currentColor"/>
-                </svg>
-              </span>
-              Preview
+              <span class="material-symbols-outlined">check</span>
+              Confirm
             </button>
             <button class="btn btn-secondary btn-medium">
-              <span class="btn-icon">
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                  <path d="M8 10.8C8.77778 10.8 9.43889 10.5278 9.98334 9.98333C10.5278 9.43889 10.8 8.77777 10.8 8C10.8 7.22222 10.5278 6.56111 9.98334 6.01666C9.43889 5.47222 8.77778 5.2 8 5.2C7.22223 5.2 6.56112 5.47222 6.01667 6.01666C5.47223 6.56111 5.2 7.22222 5.2 8C5.2 8.77777 5.47223 9.43889 6.01667 9.98333C6.56112 10.5278 7.22223 10.8 8 10.8ZM8 9.6C7.55556 9.6 7.17778 9.44444 6.86667 9.13333C6.55556 8.82222 6.4 8.44444 6.4 8C6.4 7.55555 6.55556 7.17777 6.86667 6.86666C7.17778 6.55555 7.55556 6.4 8 6.4C8.44445 6.4 8.82223 6.55555 9.13334 6.86666C9.44445 7.17777 9.60001 7.55555 9.60001 8C9.60001 8.44444 9.44445 8.82222 9.13334 9.13333C8.82223 9.44444 8.44445 9.6 8 9.6Z" fill="currentColor"/>
-                </svg>
-              </span>
-              Preview
+              <span class="material-symbols-outlined">add</span>
+              Add Item
             </button>
           </div>
         </div>
@@ -160,18 +155,13 @@
           <div class="preview-label">Icon Only</div>
           <div class="preview-controls">
             <button class="btn btn-primary btn-medium" style="padding: 10px;">
-              <span class="btn-icon">
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                  <path d="M8 10.8C8.77778 10.8 9.43889 10.5278 9.98334 9.98333C10.5278 9.43889 10.8 8.77777 10.8 8C10.8 7.22222 10.5278 6.56111 9.98334 6.01666C9.43889 5.47222 8.77778 5.2 8 5.2C7.22223 5.2 6.56112 5.47222 6.01667 6.01666C5.47223 6.56111 5.2 7.22222 5.2 8C5.2 8.77777 5.47223 9.43889 6.01667 9.98333C6.56112 10.5278 7.22223 10.8 8 10.8ZM8 9.6C7.55556 9.6 7.17778 9.44444 6.86667 9.13333C6.55556 8.82222 6.4 8.44444 6.4 8C6.4 7.55555 6.55556 7.17777 6.86667 6.86666C7.17778 6.55555 7.55556 6.4 8 6.4C8.44445 6.4 8.82223 6.55555 9.13334 6.86666C9.44445 7.17777 9.60001 7.55555 9.60001 8C9.60001 8.44444 9.44445 8.82222 9.13334 9.13333C8.82223 9.44444 8.44445 9.6 8 9.6Z" fill="currentColor"/>
-                </svg>
-              </span>
+              <span class="material-symbols-outlined">visibility</span>
             </button>
             <button class="btn btn-secondary btn-medium" style="padding: 10px;">
-              <span class="btn-icon">
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
-                  <path d="M8 10.8C8.77778 10.8 9.43889 10.5278 9.98334 9.98333C10.5278 9.43889 10.8 8.77777 10.8 8C10.8 7.22222 10.5278 6.56111 9.98334 6.01666C9.43889 5.47222 8.77778 5.2 8 5.2C7.22223 5.2 6.56112 5.47222 6.01667 6.01666C5.47223 6.56111 5.2 7.22222 5.2 8C5.2 8.77777 5.47223 9.43889 6.01667 9.98333C6.56112 10.5278 7.22223 10.8 8 10.8ZM8 9.6C7.55556 9.6 7.17778 9.44444 6.86667 9.13333C6.55556 8.82222 6.4 8.44444 6.4 8C6.4 7.55555 6.55556 7.17777 6.86667 6.86666C7.17778 6.55555 7.55556 6.4 8 6.4C8.44445 6.4 8.82223 6.55555 9.13334 6.86666C9.44445 7.17777 9.60001 7.55555 9.60001 8C9.60001 8.44444 9.44445 8.82222 9.13334 9.13333C8.82223 9.44444 8.44445 9.6 8 9.6Z" fill="currentColor"/>
-                </svg>
-              </span>
+              <span class="material-symbols-outlined">settings</span>
+            </button>
+            <button class="btn btn-destructive btn-medium" style="padding: 10px;">
+              <span class="material-symbols-outlined">close</span>
             </button>
           </div>
         </div>
@@ -181,20 +171,12 @@
       <section class="section">
         <div class="section-header">
           <h2 class="section-title display-20">Usage</h2>
-          <p class="section-description">HTML structure for buttons.</p>
         </div>
 
         <div class="code-block">
-&lt;!-- Primary button --&gt;
-&lt;button class="btn btn-primary btn-medium"&gt;
-  Click me
-&lt;/button&gt;
-
 &lt;!-- Button with icon --&gt;
 &lt;button class="btn btn-primary btn-medium"&gt;
-  &lt;span class="btn-icon"&gt;
-    &lt;svg&gt;...&lt;/svg&gt;
-  &lt;/span&gt;
+  &lt;span class="material-symbols-outlined"&gt;visibility&lt;/span&gt;
   Preview
 &lt;/button&gt;</div>
       </section>
@@ -227,7 +209,7 @@
             </tr>
             <tr>
               <td><code>btn-destructive</code></td>
-              <td>Destructive/danger button variant</td>
+              <td>Destructive button variant</td>
             </tr>
             <tr>
               <td><code>btn-success</code></td>
@@ -235,15 +217,15 @@
             </tr>
             <tr>
               <td><code>btn-small</code></td>
-              <td>Small button size</td>
+              <td>Small size</td>
             </tr>
             <tr>
               <td><code>btn-medium</code></td>
-              <td>Medium button size (default)</td>
+              <td>Medium size (default)</td>
             </tr>
             <tr>
               <td><code>btn-large</code></td>
-              <td>Large button size</td>
+              <td>Large size</td>
             </tr>
           </tbody>
         </table>
