--- a/pages/buttons.html
+++ b/pages/buttons.html
@@ -16,10 +16,23 @@
       font-size: 16px;
     }
   </style>
+  <script src="../js/theme-toggle.js"></script>
 </head>
 <body>
   <div class="site-container">
     
+    <!-- Theme Toggle -->
+    <div class="theme-toggle">
+      <button class="theme-toggle-btn active" data-theme="dark">
+        <span class="material-symbols-outlined" style="font-size: 16px;">dark_mode</span>
+        Dark
+      </button>
+      <button class="theme-toggle-btn" data-theme="light">
+        <span class="material-symbols-outlined" style="font-size: 16px;">light_mode</span>
+        Light
+      </button>
+    </div>
+
     <!-- Sidebar Navigation -->
     <nav class="sidebar">
       <div class="sidebar-logo">
