--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>UI Kit - Design System</title>
+  <title>Id.s UI Kit</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -30,7 +30,7 @@
     <!-- Sidebar Navigation -->
     <nav class="sidebar">
       <div class="sidebar-logo">
-        <h1>UI Kit</h1>
+        <h1>Id.s UI Kit</h1>
       </div>
 
       <div class="nav-section">
@@ -53,7 +53,7 @@
     <!-- Main Content -->
     <main class="main-content">
       <div class="page-header">
-        <h1 class="page-title display-32">Design System</h1>
+        <h1 class="page-title display-32">Id.s UI Kit</h1>
         <p class="page-description copy-16">A comprehensive design system built with reusable components and design tokens.</p>
       </div>
 
